--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ line-height: 70px;
     justify-content: center;
     align-items: center;
     /* height: 100svh; */
-    height: 70vh;
+    height: 70svh;
 
 }
 .banner div{
@@ -115,8 +115,7 @@ line-height: 70px;
 }
 .banner-img img{
     width:375px;
-   /* width: 100%; */
-    /* height: 353px; */
+   
     padding: 40px;
     
 
@@ -151,25 +150,41 @@ fill:linear-gradient(135deg, rgba(192, 204, 218, 0.10) 0%, rgba(192, 204, 218, 0
     margin:0 auto;
     display:grid;
     grid-template-columns: repeat(4,1fr);
-    gap: 20px;
+    gap: 10px;
 
+}
+.card{
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    padding:10px auto;
+    
+}
+.collection-section .card img{
+    margin: auto;
+    width:90%;
+    margin:10px auto;
+}
+.card ul li{
+    display:flex;
 }
 @media screen and (max-width:576px){
     .section-style{
         flex-direction: column;
-        width: 100%;
+        width:100%;
 
     }
     .banner{
         margin:0px;
         padding: 20px auto;
         width: 100%;
-        flex-direction: column-reverse;
+        flex-direction: column;
+        height: auto;
 
     }
     .banner div{
         width:100%;
-        padding: 20px auto;
+        /* padding: 20px; */
         margin: 0;
         height: max-content;
     
